Fix header bar style and button spacing

--- a/data/style.css
+++ b/data/style.css
@@ -41,15 +41,6 @@
     text-shadow: 0 0 0.3em alpha(@fg_color, 0.4);
 }
 
-.flat-headerbar {
-    background: @bg_color;
-    color: @fg_color;
-    box-shadow:
-        inset 0 1px 0 0 alpha(@highlight_color, 0.3),
-        inset 1px 0 0 0 alpha(@highlight_color, 0.07),
-        inset -1px 0 0 0 alpha(@highlight_color, 0.07);
-}
-
 headerbar {
     background: @bg_color;
     color: @fg_color;
